--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,16 @@
 
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
+    id 'org.openjfx.javafxplugin' version '0.0.12'
     id 'application'
+    id 'java'
+
+}
+
+// Configuration of the JavaFX plugin
+javafx {
+    version = '17'
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 repositories {
